--- a/index.html
+++ b/index.html
@@ -11,16 +11,23 @@
         <link rel="stylesheet" href="assets/css/styles.css" />
     </head>
     <body>
+        <header>
+            <img
+                class="imgLogo"
+                src="assets/images/LogoChiqueEletricoTopo.png"
+            />
+
+            <div class="ender">
+                <p>Rua Chique CHique, 123</p>
+                <p>Tel: (21) 91234-4321</p>
+                <p>contato@chiqueletrico.com.br</p>
+            </div>
+        </header>
         <div class="container">
             <div class="l-side">
-                <div class="">
-                    <img class="imgLogo"src="assets/images/LogoChiqueEletricoTopo.png" />
-                    <!-- <hr class="line" /> -->
-                </div>
-
                 <nav class="row-nav">
-                    <ul>
-                        <li><a href="ChiqueEletrico.html">Apresentacao</a></li>
+                    <ul class="nav-links">
+                        <li><a href="index.html">Apresentacao</a></li>
                         <li><a href="Materiais.html">Materiais</a></li>
                         <li><a href="Acabamentos.html">Acabamentos</a></li>
                         <li><a href="Pedidos.html">Pedidos</a></li>
@@ -30,11 +37,6 @@
 
             <div class="r-side">
                 <section class="row-logo">
-                    <div class="ender">
-                        <p>Rua Chique CHique, 123</p>
-                        <p>Tel: (21) 91234-4321</p>
-                        <p>contato@chiqueletrico.com.br</p>
-                    </div>
                     <div class="apres">
                         <img src="assets/images/LogoChiqueEletrico.png" />
                         <h4>
