update: pedidos page

--- a/Pedidos.html
+++ b/Pedidos.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
- <head>
+    <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Materials - Chique Elétrico</title>
@@ -8,38 +8,47 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Sofia"
         />
-        <link rel="stylesheet" href="assets/css/styles.css" />
+        <link rel="stylesheet" href="./assets/css/styles.css" />
+        <link rel="stylesheet" href="./assets/css/form-style.css">
     </head>
 <body>
-     <body>
-        <header>
-            <img
-                class="imgLogo"
-                src="assets/images/LogoChiqueEletricoTopo.png"
-            />
+    <header>
+        <img
+            class="imgLogo"
+            src="assets/images/LogoChiqueEletricoTopo.png"
+        />
 
-            <div class="ender">
-                <p>Rua Chique CHique, 123</p>
-                <p>Tel: (21) 91234-4321</p>
-                <p>contato@chiqueletrico.com.br</p>
-            </div>
-        </header>
-        <div class="container">
-            <div class="l-side">
-                <nav class="row-nav">
-                    <ul class="nav-links">
-                        <li><a href="index.html">Apresentacao</a></li>
-                        <li><a href="Materiais.html">Materiais</a></li>
-                        <li><a href="Acabamentos.html">Acabamentos</a></li>
-                        <li><a href="Pedidos.html">Pedidos</a></li>
-                    </ul>
-                </nav>
-            </div>
-
-            <div class="r-side">
-            </div>
+        <div class="ender">
+            <p>Rua Chique CHique, 123</p>
+            <p>Tel: (21) 91234-4321</p>
+            <p>contato@chiqueletrico.com.br</p>
         </div>
-    </body>
-    
+    </header>
+    <div class="container">
+        <div class="l-side">
+            <nav class="row-nav">
+                <ul class="nav-links">
+                    <li><a href="index.html">Apresentacao</a></li>
+                    <li><a href="Materiais.html">Materiais</a></li>
+                    <li><a href="Acabamentos.html">Acabamentos</a></li>
+                    <li><a href="Pedidos.html">Pedidos</a></li>
+                </ul>
+            </nav>
+        </div>
+
+        <div class="r-side">
+            <section>
+
+                <div class="divCompras">
+                    <h4 class-form-title>Compras</h4>
+                    <form action="">
+                        
+                        <p>Identificação</p>
+                    </form>
+                </div>
+            </section>
+        </div>
+    </div>
+
 </body>
 </html>
