--- a/Acabamentos.html
+++ b/Acabamentos.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
- <head>
+    <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Materials - Chique Elétrico</title>
+        <title>Acabamentos - Chique Elétrico</title>
         <link
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Sofia"
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="assets/css/styles.css" />
     </head>
 <body>
-     
+
     <header>
         <img
             class="imgLogo"
@@ -62,7 +62,7 @@
                             />
                         </td>
                         <td>
-                            <span>R$ 4,00</span>
+                            <span class="price">R$ 4,00</span>
                         </td>
 
                     </tr>
@@ -77,7 +77,7 @@
                             />
                         </td>
                         <td>
-                            <span>R$ 6,00</span>
+                            <span class="price">R$ 6,00</span>
                         </td>
                     </tr>
 
@@ -91,7 +91,7 @@
                             >
                         </td>
                         <td>
-                            <span>R$ 6,00</span>
+                            <span class="price">R$ 6,00</span>
                         </td>
                     </tr>
 
@@ -109,7 +109,7 @@
                             >
                         </td>
                         <td>
-                            <span>R$ 4,00</span>
+                            <span class="price">R$ 4,00</span>
                         </td>
                     </tr>
                     <tr>
@@ -122,7 +122,7 @@
                             >
                         </td>
                         <td>
-                            <span>R$ 5,00</span>
+                            <span class="price">R$ 5,00</span>
                         </td>
                     </tr>
                     <tr>
@@ -135,7 +135,7 @@
                             >
                         </td>
                         <td>
-                            <span>R$ 4,00</span>
+                            <span class="price">R$ 4,00</span>
                         </td>
                     </tr>
 
