--- a/Pedidos.html
+++ b/Pedidos.html
@@ -316,7 +316,13 @@
                                         </optgroup>
 
                                     </select>
-                                    <button type="submit" id="buy">Comprar</button>
+                                    <button 
+                                        type="submit" 
+                                        id="buy"
+                                    >
+                                        Comprar
+
+                                    </button>
                                     <div class="border-card">
                                         <p id="card-title">
                                             cartão
@@ -395,8 +401,19 @@
 
                         </div>
                         <div class="botoes">
-                            <button class="sendButton" type="submit">Enviar</button>
-                            <button class="sendButton" type="button">Limpar</button>
+                            <button
+                                class="sendButton"
+                                type="submit"
+                            >
+                                Enviar
+                            </button>
+                            
+                            <button 
+                                class="sendButton"
+                                type="button"
+                            >
+                                Limpar
+                            </button>
                         </div>
                     </form>
 
