--- a/Acabamentos.html
+++ b/Acabamentos.html
@@ -6,7 +6,9 @@
             name="viewport" 
             content="width=device-width, initial-scale=1.0" 
         />
-        <title>Acabamentos - Chique Elétrico</title>
+        <title>
+            Acabamentos - Chique Elétrico
+        </title>
         <link
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Sofia"
@@ -179,7 +181,7 @@
                             class="itemLink"
                         >
                         Interruptor
-                    </td>
+                        </td>
                     </tr>
 
                     <tr>
